<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetGradeActivity"
    android:background="?attr/theme_backgroundColor"
    >

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_cardBackground">

        <!-- Title -->
        <TextView
            android:id="@+id/course_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="?attr/theme_backgroundColor"
            android:textSize="18sp"
            android:text="@string/str_home"
            android:fontFamily="@font/bai_jamjuree" />

        <ImageButton
            android:id="@+id/menu_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:src="?attr/theme_icon_menu"
            android:contentDescription="@string/str_home"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/course_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <TextView android:id="@+id/course_module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="24sp"
            android:textColor="?attr/theme_text"
            android:fontFamily="@font/bai_jamjuree"
            android:textAlignment="center"

            android:text="@string/app_name"/>

        <TextView android:id="@+id/module_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="24sp"
            android:textColor="?attr/theme_text"
            android:fontFamily="@font/bai_jamjuree"
            android:textAlignment="center"

            android:text="@string/str_module_one"/>

        <EditText
            android:id="@+id/input_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?attr/theme_input"

            android:textSize="14sp"
            android:textColorHint="?attr/theme_backgroundColor"
            android:fontFamily="@font/bai_jamjuree"
            android:hint="@string/str_input"
            android:inputType="numberDecimal"

            android:padding="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/course_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"

            android:text="@string/str_back_btn"
            android:textSize="16sp"
            android:textColor="?attr/theme_backgroundColor"
            android:fontFamily="@font/bai_jamjuree"
            android:backgroundTint="?attr/theme_cardColor" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"

            android:text="@string/str_next_btn"
            android:textSize="16sp"
            android:textColor="?attr/theme_backgroundColor"

            android:fontFamily="@font/bai_jamjuree"
            android:backgroundTint="?attr/theme_cardColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
